# KanoopProtocolQt

./: .gitignore  CLAUDE.md  CMakeLists.txt  CODEOWNERS  Doxyfile  README.md  libKanoopProtocolQt.pc.in
.github/workflows/: ci.yaml
docs/: mainpage.md
docs/theme/: custom.css
include/Kanoop/: kanoopprotocol.h  libkanoopprotocolqt.h
include/Kanoop/http/: httpdelete.h  httpget.h  httpheaders.h  httpoperation.h  httppost.h  httpput.h  httpstatuscodes.h  httpupload.h
include/Kanoop/mqtt/: mqttclient.h  mqttparameters.h
src/http/: httpdelete.cpp  httpget.cpp  httpoperation.cpp  httppost.cpp  httpput.cpp  httpupload.cpp
src/mqtt/: mqttclient.cpp  mqttparameters.cpp
tests/: CMakeLists.txt  tst_http.cpp  tst_http_integration.cpp  tst_mqtt_parameters.cpp
